# github-issues-e2e-test

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  main.py  mypy.ini  pyproject.toml  test.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  enlightenment_journey.md  feature_request.md  philosophical_question.md
src/: __init__.py  cli.py  existential_coder.py  oracle.py  philosopher_agent.py  utils.py  zen_master.py
tests/: __init__.py  test_existential_coder.py
