[project]
name = "gith-ub"
version = "0.1.0"
description = "G.I.T.H.U.B. - The Existential Code Companion. Generally Introspective Text Handler for Unrealized Brilliance."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "aiohttp>=3.8.0",
    "asyncio-mqtt>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
gith-ub = "gith_ub.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
